java/versioned_docs/version-1.11.0/api/class-browsertype.mdx
---
id: class-browsertype
title: "BrowserType"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

BrowserType provides methods to launch a specific browser instance or connect to an existing one. The following is a typical example of using Playwright to drive automation:

```java
import com.microsoft.playwright.*;

public class Example {
  public static void main(String[] args) {
    try (Playwright playwright = Playwright.create()) {
      BrowserType chromium = playwright.chromium();
      Browser browser = chromium.launch();
      Page page = browser.newPage();
      page.navigate("https://example.com");
      // other actions...
      browser.close();
    }
  }
}
```


- [BrowserType.connect(wsEndpoint[, options])](./api/class-browsertype.mdx#browsertypeconnectwsendpoint-options)
- [BrowserType.connectOverCDP(endpointURL[, options])](./api/class-browsertype.mdx#browsertypeconnectovercdpendpointurl-options)
- [BrowserType.executablePath()](./api/class-browsertype.mdx#browsertypeexecutablepath)
- [BrowserType.launch([options])](./api/class-browsertype.mdx#browsertypelaunchoptions)
- [BrowserType.launchPersistentContext(userDataDir[, options])](./api/class-browsertype.mdx#browsertypelaunchpersistentcontextuserdatadir-options)
- [BrowserType.name()](./api/class-browsertype.mdx#browsertypename)

## BrowserType.connect(wsEndpoint[, options])
- `wsEndpoint` <[String]> A browser websocket endpoint to connect to.
- `options` <`BrowserType.ConnectOptions`>
  - `setHeaders` <[Map]<[String], [String]>> Additional HTTP headers to be sent with web socket connect request. Optional.
  - `setSlowMo` <[double]> Slows down Playwright operations by the specified amount of milliseconds. Useful so that you can see what is going on. Defaults to 0.
  - `setTimeout` <[double]> Maximum time in milliseconds to wait for the connection to be established. Defaults to `30000` (30 seconds). Pass `0` to disable timeout.
- returns: <[Browser]>

This methods attaches Playwright to an existing browser instance.

## BrowserType.connectOverCDP(endpointURL[, options])
- `endpointURL` <[String]> A CDP websocket endpoint or http url to connect to. For example `http://localhost:9222/` or `ws://127.0.0.1:9222/devtools/browser/387adf4c-243f-4051-a181-46798f4a46f4`.
- `options` <`BrowserType.ConnectOverCDPOptions`>
  - `setHeaders` <[Map]<[String], [String]>> Additional HTTP headers to be sent with connect request. Optional.
  - `setSlowMo` <[double]> Slows down Playwright operations by the specified amount of milliseconds. Useful so that you can see what is going on. Defaults to 0.
  - `setTimeout` <[double]> Maximum time in milliseconds to wait for the connection to be established. Defaults to `30000` (30 seconds). Pass `0` to disable timeout.
- returns: <[Browser]>

This methods attaches Playwright to an existing browser instance using the Chrome DevTools Protocol.

The default browser context is accessible via [Browser.contexts()](./api/class-browser.mdx#browsercontexts).

:::note
Connecting over the Chrome DevTools Protocol is only supported for Chromium-based browsers.
:::

## BrowserType.executablePath()
- returns: <[String]>

A path where Playwright expects to find a bundled browser executable.

## BrowserType.launch([options])
- `options` <`BrowserType.LaunchOptions`>
  - `setArgs` <[List]<[String]>> Additional arguments to pass to the browser instance. The list of Chromium flags can be found [here](http://peter.sh/experiments/chromium-command-line-switches/).
  - `setChannel` <`enum BrowserChannel { CHROME, CHROME_BETA, CHROME_DEV, CHROME_CANARY, MSEDGE, MSEDGE_BETA, MSEDGE_DEV, MSEDGE_CANARY }`> Browser distribution channel. Read more about using [Google Chrome and Microsoft Edge](./browsers.mdx#google-chrome--microsoft-edge).
  - `setChromiumSandbox` <[boolean]> Enable Chromium sandboxing. Defaults to `false`.
  - `setDevtools` <[boolean]> **Chromium-only** Whether to auto-open a Developer Tools panel for each tab. If this option is `true`, the `headless` option will be set `false`.
  - `setDownloadsPath` <[Path]> If specified, accepted downloads are downloaded into this directory. Otherwise, temporary directory is created and is deleted when browser is closed.
  - `setEnv` <[Map]<[String], [String]>> Specify environment variables that will be visible to the browser. Defaults to `process.env`.
  - `setExecutablePath` <[Path]> Path to a browser executable to run instead of the bundled one. If `executablePath` is a relative path, then it is resolved relative to the current working directory. Note that Playwright only works with the bundled Chromium, Firefox or WebKit, use at your own risk.
  - `setFirefoxUserPrefs` <[Map]<[String], [Object]>> Firefox user preferences. Learn more about the Firefox user preferences at [`about:config`](https://support.mozilla.org/en-US/kb/about-config-editor-firefox).
  - `setHandleSIGHUP` <[boolean]> Close the browser process on SIGHUP. Defaults to `true`.
  - `setHandleSIGINT` <[boolean]> Close the browser process on Ctrl-C. Defaults to `true`.
  - `setHandleSIGTERM` <[boolean]> Close the browser process on SIGTERM. Defaults to `true`.
  - `setHeadless` <[boolean]> Whether to run browser in headless mode. More details for [Chromium](https://developers.google.com/web/updates/2017/04/headless-chrome) and [Firefox](https://developer.mozilla.org/en-US/docs/Mozilla/Firefox/Headless_mode). Defaults to `true` unless the `devtools` option is `true`.
  - `setIgnoreAllDefaultArgs` <[boolean]> If `true`, Playwright does not pass its own configurations args and only uses the ones from `args`. Dangerous option; use with care. Defaults to `false`.
  - `setIgnoreDefaultArgs` <[List]<[String]>> If `true`, Playwright does not pass its own configurations args and only uses the ones from `args`. Dangerous option; use with care.
  - `setProxy` <`Proxy`> Network proxy settings.
    - `setServer` <[String]> Proxy to be used for all requests. HTTP and SOCKS proxies are supported, for example `http://myproxy.com:3128` or `socks5://myproxy.com:3128`. Short form `myproxy.com:3128` is considered an HTTP proxy.
    - `setBypass` <[String]> Optional coma-separated domains to bypass proxy, for example `".com, chromium.org, .domain.com"`.
    - `setUsername` <[String]> Optional username to use if HTTP proxy requires authentication.
    - `setPassword` <[String]> Optional password to use if HTTP proxy requires authentication.
  - `setSlowMo` <[double]> Slows down Playwright operations by the specified amount of milliseconds. Useful so that you can see what is going on.
  - `setTimeout` <[double]> Maximum time in milliseconds to wait for the browser instance to start. Defaults to `30000` (30 seconds). Pass `0` to disable timeout.
- returns: <[Browser]>

Returns the browser instance.

You can use `ignoreDefaultArgs` to filter out `--mute-audio` from default arguments:

```java
// Or "firefox" or "webkit".
Browser browser = chromium.launch(new BrowserType.LaunchOptions()
  .setIgnoreDefaultArgs(Arrays.asList("--mute-audio")));
```

> **Chromium-only** Playwright can also be used to control the Google Chrome or Microsoft Edge browsers, but it works best with the version of Chromium it is bundled with. There is no guarantee it will work with any other version. Use `executablePath` option with extreme caution.
>
> If Google Chrome (rather than Chromium) is preferred, a [Chrome Canary](https://www.google.com/chrome/browser/canary.html) or [Dev Channel](https://www.chromium.org/getting-involved/dev-channel) build is suggested.
>
> Stock browsers like Google Chrome and Microsoft Edge are suitable for tests that require proprietary media codecs for video playback. See [this article](https://www.howtogeek.com/202825/what%E2%80%99s-the-difference-between-chromium-and-chrome/) for other differences between Chromium and Chrome. [This article](https://chromium.googlesource.com/chromium/src/+/lkgr/docs/chromium_browser_vs_google_chrome.md) describes some differences for Linux users.

## BrowserType.launchPersistentContext(userDataDir[, options])
- `userDataDir` <[Path]> Path to a User Data Directory, which stores browser session data like cookies and local storage. More details for [Chromium](https://chromium.googlesource.com/chromium/src/+/master/docs/user_data_dir.md#introduction) and [Firefox](https://developer.mozilla.org/en-US/docs/Mozilla/Command_Line_Options#User_Profile). Note that Chromium's user data directory is the **parent** directory of the "Profile Path" seen at `chrome://version`.
- `options` <`BrowserType.LaunchPersistentContextOptions`>
  - `setAcceptDownloads` <[boolean]> Whether to automatically download all the attachments. Defaults to `false` where all the downloads are canceled.
  - `setArgs` <[List]<[String]>> Additional arguments to pass to the browser instance. The list of Chromium flags can be found [here](http://peter.sh/experiments/chromium-command-line-switches/).
  - `setBypassCSP` <[boolean]> Toggles bypassing page's Content-Security-Policy.
  - `setChannel` <`enum BrowserChannel { CHROME, CHROME_BETA, CHROME_DEV, CHROME_CANARY, MSEDGE, MSEDGE_BETA, MSEDGE_DEV, MSEDGE_CANARY }`> Browser distribution channel. Read more about using [Google Chrome and Microsoft Edge](./browsers.mdx#google-chrome--microsoft-edge).
  - `setChromiumSandbox` <[boolean]> Enable Chromium sandboxing. Defaults to `true`.
  - `setColorScheme` <`enum ColorScheme { LIGHT, DARK, NO_PREFERENCE }`> Emulates `'prefers-colors-scheme'` media feature, supported values are `'light'`, `'dark'`, `'no-preference'`. See [Page.emulateMedia([options])](./api/class-page.mdx#pageemulatemediaoptions) for more details. Defaults to `'light'`.
  - `setDeviceScaleFactor` <[double]> Specify device scale factor (can be thought of as dpr). Defaults to `1`.
  - `setDevtools` <[boolean]> **Chromium-only** Whether to auto-open a Developer Tools panel for each tab. If this option is `true`, the `headless` option will be set `false`.
  - `setDownloadsPath` <[Path]> If specified, accepted downloads are downloaded into this directory. Otherwise, temporary directory is created and is deleted when browser is closed.
  - `setEnv` <[Map]<[String], [String]>> Specify environment variables that will be visible to the browser. Defaults to `process.env`.
  - `setExecutablePath` <[Path]> Path to a browser executable to run instead of the bundled one. If `executablePath` is a relative path, then it is resolved relative to the current working directory. **BEWARE**: Playwright is only guaranteed to work with the bundled Chromium, Firefox or WebKit, use at your own risk.
  - `setExtraHTTPHeaders` <[Map]<[String], [String]>> An object containing additional HTTP headers to be sent with every request. All header values must be strings.
  - `setGeolocation` <`Geolocation`>
    - `setLatitude` <[double]> Latitude between -90 and 90.
    - `setLongitude` <[double]> Longitude between -180 and 180.
    - `setAccuracy` <[double]> Non-negative accuracy value. Defaults to `0`.
  - `setHandleSIGHUP` <[boolean]> Close the browser process on SIGHUP. Defaults to `true`.
  - `setHandleSIGINT` <[boolean]> Close the browser process on Ctrl-C. Defaults to `true`.
  - `setHandleSIGTERM` <[boolean]> Close the browser process on SIGTERM. Defaults to `true`.
  - `setHasTouch` <[boolean]> Specifies if viewport supports touch events. Defaults to false.
  - `setHeadless` <[boolean]> Whether to run browser in headless mode. More details for [Chromium](https://developers.google.com/web/updates/2017/04/headless-chrome) and [Firefox](https://developer.mozilla.org/en-US/docs/Mozilla/Firefox/Headless_mode). Defaults to `true` unless the `devtools` option is `true`.
  - `setHttpCredentials` <`HttpCredentials`> Credentials for [HTTP authentication](https://developer.mozilla.org/en-US/docs/Web/HTTP/Authentication).
    - `setUsername` <[String]>
    - `setPassword` <[String]>
  - `setIgnoreAllDefaultArgs` <[boolean]> If `true`, Playwright does not pass its own configurations args and only uses the ones from `args`. Dangerous option; use with care. Defaults to `false`.
  - `setIgnoreDefaultArgs` <[List]<[String]>> If `true`, Playwright does not pass its own configurations args and only uses the ones from `args`. Dangerous option; use with care.
  - `setIgnoreHTTPSErrors` <[boolean]> Whether to ignore HTTPS errors during navigation. Defaults to `false`.
  - `setIsMobile` <[boolean]> Whether the `meta viewport` tag is taken into account and touch events are enabled. Defaults to `false`. Not supported in Firefox.
  - `setJavaScriptEnabled` <[boolean]> Whether or not to enable JavaScript in the context. Defaults to `true`.
  - `setLocale` <[String]> Specify user locale, for example `en-GB`, `de-DE`, etc. Locale will affect `navigator.language` value, `Accept-Language` request header value as well as number and date formatting rules.
  - `setOffline` <[boolean]> Whether to emulate network being offline. Defaults to `false`.
  - `setPermissions` <[List]<[String]>> A list of permissions to grant to all pages in this context. See [BrowserContext.grantPermissions(permissions[, options])](./api/class-browsercontext.mdx#browsercontextgrantpermissionspermissions-options) for more details.
  - `setProxy` <`Proxy`> Network proxy settings.
    - `setServer` <[String]> Proxy to be used for all requests. HTTP and SOCKS proxies are supported, for example `http://myproxy.com:3128` or `socks5://myproxy.com:3128`. Short form `myproxy.com:3128` is considered an HTTP proxy.
    - `setBypass` <[String]> Optional coma-separated domains to bypass proxy, for example `".com, chromium.org, .domain.com"`.
    - `setUsername` <[String]> Optional username to use if HTTP proxy requires authentication.
    - `setPassword` <[String]> Optional password to use if HTTP proxy requires authentication.
  - `setRecordHarOmitContent` <[boolean]> Optional setting to control whether to omit request content from the HAR. Defaults to `false`.
  - `setRecordHarPath` <[Path]> Enables [HAR](http://www.softwareishard.com/blog/har-12-spec) recording for all pages into the specified HAR file on the filesystem. If not specified, the HAR is not recorded. Make sure to call [BrowserContext.close()](./api/class-browsercontext.mdx#browsercontextclose) for the HAR to be saved.
  - `setRecordVideoDir` <[Path]> Enables video recording for all pages into the specified directory. If not specified videos are not recorded. Make sure to call [BrowserContext.close()](./api/class-browsercontext.mdx#browsercontextclose) for videos to be saved.
  - `setRecordVideoSize` <`RecordVideoSize`> Dimensions of the recorded videos. If not specified the size will be equal to `viewport` scaled down to fit into 800x800. If `viewport` is not configured explicitly the video size defaults to 800x450. Actual picture of each page will be scaled down if necessary to fit the specified size.
    - `setWidth` <[int]> Video frame width.
    - `setHeight` <[int]> Video frame height.
  - `setScreenSize` <`ScreenSize`> Emulates consistent window screen size available inside web page via `window.screen`. Is only used when the `viewport` is set.
    - `setWidth` <[int]> page width in pixels.
    - `setHeight` <[int]> page height in pixels.
  - `setSlowMo` <[double]> Slows down Playwright operations by the specified amount of milliseconds. Useful so that you can see what is going on. Defaults to 0.
  - `setTimeout` <[double]> Maximum time in milliseconds to wait for the browser instance to start. Defaults to `30000` (30 seconds). Pass `0` to disable timeout.
  - `setTimezoneId` <[String]> Changes the timezone of the context. See [ICU's metaZones.txt](https://cs.chromium.org/chromium/src/third_party/icu/source/data/misc/metaZones.txt?rcl=faee8bc70570192d82d2978a71e2a615788597d1) for a list of supported timezone IDs.
  - `setUserAgent` <[String]> Specific user agent to use in this context.
  - `setViewportSize` <[null]|`ViewportSize`> Emulates consistent viewport for each page. Defaults to an 1280x720 viewport. `null` disables the default viewport.
    - `setWidth` <[int]> page width in pixels.
    - `setHeight` <[int]> page height in pixels.
- returns: <[BrowserContext]>

Returns the persistent browser context instance.

Launches browser that uses persistent storage located at `userDataDir` and returns the only context. Closing this context will automatically close the browser.

## BrowserType.name()
- returns: <[String]>

Returns browser name. For example: `'chromium'`, `'webkit'` or `'firefox'`.

[Browser]: ./api/class-browser.mdx "Browser"
[BrowserContext]: ./api/class-browsercontext.mdx "BrowserContext"
[BrowserType]: ./api/class-browsertype.mdx "BrowserType"
[ConsoleMessage]: ./api/class-consolemessage.mdx "ConsoleMessage"
[Dialog]: ./api/class-dialog.mdx "Dialog"
[Download]: ./api/class-download.mdx "Download"
[ElementHandle]: ./api/class-elementhandle.mdx "ElementHandle"
[FileChooser]: ./api/class-filechooser.mdx "FileChooser"
[Frame]: ./api/class-frame.mdx "Frame"
[JSHandle]: ./api/class-jshandle.mdx "JSHandle"
[Keyboard]: ./api/class-keyboard.mdx "Keyboard"
[Mouse]: ./api/class-mouse.mdx "Mouse"
[Page]: ./api/class-page.mdx "Page"
[Playwright]: ./api/class-playwright.mdx "Playwright"
[PlaywrightException]: ./api/class-playwrightexception.mdx "PlaywrightException"
[Request]: ./api/class-request.mdx "Request"
[Response]: ./api/class-response.mdx "Response"
[Route]: ./api/class-route.mdx "Route"
[Selectors]: ./api/class-selectors.mdx "Selectors"
[TimeoutError]: ./api/class-timeouterror.mdx "TimeoutError"
[Touchscreen]: ./api/class-touchscreen.mdx "Touchscreen"
[Video]: ./api/class-video.mdx "Video"
[WebSocket]: ./api/class-websocket.mdx "WebSocket"
[WebSocketFrame]: ./api/class-websocketframe.mdx "WebSocketFrame"
[Worker]: ./api/class-worker.mdx "Worker"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[EvaluationArgument]: ./core-concepts.mdx#evaluation-argument "EvaluationArgument"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify#Description "Serializable"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"

[boolean]: https://docs.oracle.com/javase/tutorial/java/nutsandbolts/datatypes.html "boolean"
[byte&#91;&#93;]: https://docs.oracle.com/javase/tutorial/java/nutsandbolts/datatypes.html "byte[]"
[Consumer]: https://docs.oracle.com/javase/8/docs/api/java/util/function/Consumer.html "Consumer"
[double]: https://docs.oracle.com/javase/tutorial/java/nutsandbolts/datatypes.html "double"
[InputStream]: https://docs.oracle.com/javase/8/docs/api/java/io/InputStream.html "InputStream"
[int]: https://docs.oracle.com/javase/tutorial/java/nutsandbolts/datatypes.html "int"
[List]: https://docs.oracle.com/javase/8/docs/api/java/util/List.html "List"
[Map]: https://docs.oracle.com/javase/8/docs/api/java/util/Map.html "Map"
[null]: https://docs.oracle.com/javase/specs/jls/se8/html/jls-3.html#jls-3.10.7 "null"
[Object]: https://docs.oracle.com/javase/8/docs/api/java/lang/Object.html "Object"
[Path]: https://docs.oracle.com/javase/8/docs/api/java/nio/file/Path.html "Path"
[Pattern]: https://docs.oracle.com/javase/8/docs/api/java/util/regex/Pattern.html "Pattern"
[Predicate]: https://docs.oracle.com/javase/8/docs/api/java/util/function/Predicate.html "Predicate"
[void]: https://docs.oracle.com/javase/tutorial/java/javaOO/methods.html "void"
[Runnable]: https://docs.oracle.com/javase/8/docs/api/java/lang/Runnable.html "Runnable"
[RuntimeException]: https://docs.oracle.com/javase/8/docs/api/java/lang/RuntimeException.html "RuntimeException"
[String]: https://docs.oracle.com/javase/8/docs/api/java/lang/String.html "String"

[all available image tags]: https://mcr.microsoft.com/v2/playwright/java/tags/list "all available image tags"
[Docker Hub]: https://hub.docker.com/_/microsoft-playwright-java "Docker Hub"
[Dockerfile.focal]: https://github.com/microsoft/playwright-java/blob/master/Dockerfile.focal "Dockerfile.focal"