java/versioned_docs/version-1.12.0/api/class-browsertype.mdx
---
id: class-browsertype
title: "BrowserType"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

BrowserType provides methods to launch a specific browser instance or connect to an existing one. The following is a typical example of using Playwright to drive automation:

```java
import com.microsoft.playwright.*;

public class Example {
  public static void main(String[] args) {
    try (Playwright playwright = Playwright.create()) {
      BrowserType chromium = playwright.chromium();
      Browser browser = chromium.launch();
      Page page = browser.newPage();
      page.navigate("https://example.com");
      // other actions...
      browser.close();
    }
  }
}
```


- [BrowserType.connect(wsEndpoint[, options])](./api/class-browsertype.mdx#browser-type-connect)
- [BrowserType.connectOverCDP(endpointURL[, options])](./api/class-browsertype.mdx#browser-type-connect-over-cdp)
- [BrowserType.executablePath()](./api/class-browsertype.mdx#browser-type-executable-path)
- [BrowserType.launch([options])](./api/class-browsertype.mdx#browser-type-launch)
- [BrowserType.launchPersistentContext(userDataDir[, options])](./api/class-browsertype.mdx#browser-type-launch-persistent-context)
- [BrowserType.name()](./api/class-browsertype.mdx#browser-type-name)

## BrowserType.connect(wsEndpoint[, options]) {#browser-type-connect}
- `wsEndpoint` &#60;[String]&#62; A browser websocket endpoint to connect to.
- `options` &#60;`BrowserType.ConnectOptions`&#62;
  - `setHeaders` &#60;[Map]<[String], [String]>&#62; Additional HTTP headers to be sent with web socket connect request. Optional.
  - `setSlowMo` &#60;[double]&#62; Slows down Playwright operations by the specified amount of milliseconds. Useful so that you can see what is going on. Defaults to 0.
  - `setTimeout` &#60;[double]&#62; Maximum time in milliseconds to wait for the connection to be established. Defaults to `30000` (30 seconds). Pass `0` to disable timeout.
- returns: &#60;[Browser]&#62;

This methods attaches Playwright to an existing browser instance.

## BrowserType.connectOverCDP(endpointURL[, options]) {#browser-type-connect-over-cdp}
- `endpointURL` &#60;[String]&#62; A CDP websocket endpoint or http url to connect to. For example `http://localhost:9222/` or `ws://127.0.0.1:9222/devtools/browser/387adf4c-243f-4051-a181-46798f4a46f4`.
- `options` &#60;`BrowserType.ConnectOverCDPOptions`&#62;
  - `setHeaders` &#60;[Map]<[String], [String]>&#62; Additional HTTP headers to be sent with connect request. Optional.
  - `setSlowMo` &#60;[double]&#62; Slows down Playwright operations by the specified amount of milliseconds. Useful so that you can see what is going on. Defaults to 0.
  - `setTimeout` &#60;[double]&#62; Maximum time in milliseconds to wait for the connection to be established. Defaults to `30000` (30 seconds). Pass `0` to disable timeout.
- returns: &#60;[Browser]&#62;

This methods attaches Playwright to an existing browser instance using the Chrome DevTools Protocol.

The default browser context is accessible via [Browser.contexts()](./api/class-browser.mdx#browser-contexts).

:::note
Connecting over the Chrome DevTools Protocol is only supported for Chromium-based browsers.
:::

## BrowserType.executablePath() {#browser-type-executable-path}
- returns: &#60;[String]&#62;

A path where Playwright expects to find a bundled browser executable.

## BrowserType.launch([options]) {#browser-type-launch}
- `options` &#60;`BrowserType.LaunchOptions`&#62;
  - `setArgs` &#60;[List]<[String]>&#62; Additional arguments to pass to the browser instance. The list of Chromium flags can be found [here](http://peter.sh/experiments/chromium-command-line-switches/).
  - `setChannel` &#60;[String]&#62; Browser distribution channel.  Supported values are "chrome", "chrome-beta", "chrome-dev", "chrome-canary", "msedge", "msedge-beta", "msedge-dev", "msedge-canary". Read more about using [Google Chrome and Microsoft Edge](./browsers.mdx#google-chrome--microsoft-edge).
  - `setChromiumSandbox` &#60;[boolean]&#62; Enable Chromium sandboxing. Defaults to `false`.
  - `setDevtools` &#60;[boolean]&#62; **Chromium-only** Whether to auto-open a Developer Tools panel for each tab. If this option is `true`, the `headless` option will be set `false`.
  - `setDownloadsPath` &#60;[Path]&#62; If specified, accepted downloads are downloaded into this directory. Otherwise, temporary directory is created and is deleted when browser is closed.
  - `setEnv` &#60;[Map]<[String], [String]>&#62; Specify environment variables that will be visible to the browser. Defaults to `process.env`.
  - `setExecutablePath` &#60;[Path]&#62; Path to a browser executable to run instead of the bundled one. If `executablePath` is a relative path, then it is resolved relative to the current working directory. Note that Playwright only works with the bundled Chromium, Firefox or WebKit, use at your own risk.
  - `setFirefoxUserPrefs` &#60;[Map]<[String], [Object]>&#62; Firefox user preferences. Learn more about the Firefox user preferences at [`about:config`](https://support.mozilla.org/en-US/kb/about-config-editor-firefox).
  - `setHandleSIGHUP` &#60;[boolean]&#62; Close the browser process on SIGHUP. Defaults to `true`.
  - `setHandleSIGINT` &#60;[boolean]&#62; Close the browser process on Ctrl-C. Defaults to `true`.
  - `setHandleSIGTERM` &#60;[boolean]&#62; Close the browser process on SIGTERM. Defaults to `true`.
  - `setHeadless` &#60;[boolean]&#62; Whether to run browser in headless mode. More details for [Chromium](https://developers.google.com/web/updates/2017/04/headless-chrome) and [Firefox](https://developer.mozilla.org/en-US/docs/Mozilla/Firefox/Headless_mode). Defaults to `true` unless the `devtools` option is `true`.
  - `setIgnoreAllDefaultArgs` &#60;[boolean]&#62; If `true`, Playwright does not pass its own configurations args and only uses the ones from `args`. Dangerous option; use with care. Defaults to `false`.
  - `setIgnoreDefaultArgs` &#60;[List]<[String]>&#62; If `true`, Playwright does not pass its own configurations args and only uses the ones from `args`. Dangerous option; use with care.
  - `setProxy` &#60;Proxy&#62; Network proxy settings.
    - `setServer` &#60;[String]&#62; Proxy to be used for all requests. HTTP and SOCKS proxies are supported, for example `http://myproxy.com:3128` or `socks5://myproxy.com:3128`. Short form `myproxy.com:3128` is considered an HTTP proxy.
    - `setBypass` &#60;[String]&#62; Optional coma-separated domains to bypass proxy, for example `".com, chromium.org, .domain.com"`.
    - `setUsername` &#60;[String]&#62; Optional username to use if HTTP proxy requires authentication.
    - `setPassword` &#60;[String]&#62; Optional password to use if HTTP proxy requires authentication.
  - `setSlowMo` &#60;[double]&#62; Slows down Playwright operations by the specified amount of milliseconds. Useful so that you can see what is going on.
  - `setTimeout` &#60;[double]&#62; Maximum time in milliseconds to wait for the browser instance to start. Defaults to `30000` (30 seconds). Pass `0` to disable timeout.
  - `setTracesDir` &#60;[Path]&#62; If specified, traces are saved into this directory.
- returns: &#60;[Browser]&#62;

Returns the browser instance.

You can use `ignoreDefaultArgs` to filter out `--mute-audio` from default arguments:

```java
// Or "firefox" or "webkit".
Browser browser = chromium.launch(new BrowserType.LaunchOptions()
  .setIgnoreDefaultArgs(Arrays.asList("--mute-audio")));
```

> **Chromium-only** Playwright can also be used to control the Google Chrome or Microsoft Edge browsers, but it works best with the version of Chromium it is bundled with. There is no guarantee it will work with any other version. Use `executablePath` option with extreme caution.
>
> If Google Chrome (rather than Chromium) is preferred, a [Chrome Canary](https://www.google.com/chrome/browser/canary.html) or [Dev Channel](https://www.chromium.org/getting-involved/dev-channel) build is suggested.
>
> Stock browsers like Google Chrome and Microsoft Edge are suitable for tests that require proprietary media codecs for video playback. See [this article](https://www.howtogeek.com/202825/what%E2%80%99s-the-difference-between-chromium-and-chrome/) for other differences between Chromium and Chrome. [This article](https://chromium.googlesource.com/chromium/src/+/lkgr/docs/chromium_browser_vs_google_chrome.md) describes some differences for Linux users.

## BrowserType.launchPersistentContext(userDataDir[, options]) {#browser-type-launch-persistent-context}
- `userDataDir` &#60;[Path]&#62; Path to a User Data Directory, which stores browser session data like cookies and local storage. More details for [Chromium](https://chromium.googlesource.com/chromium/src/+/master/docs/user_data_dir.md#introduction) and [Firefox](https://developer.mozilla.org/en-US/docs/Mozilla/Command_Line_Options#User_Profile). Note that Chromium's user data directory is the **parent** directory of the "Profile Path" seen at `chrome://version`.
- `options` &#60;`BrowserType.LaunchPersistentContextOptions`&#62;
  - `setAcceptDownloads` &#60;[boolean]&#62; Whether to automatically download all the attachments. Defaults to `false` where all the downloads are canceled.
  - `setArgs` &#60;[List]<[String]>&#62; Additional arguments to pass to the browser instance. The list of Chromium flags can be found [here](http://peter.sh/experiments/chromium-command-line-switches/).
  - `setBypassCSP` &#60;[boolean]&#62; Toggles bypassing page's Content-Security-Policy.
  - `setChannel` &#60;[String]&#62; Browser distribution channel.  Supported values are "chrome", "chrome-beta", "chrome-dev", "chrome-canary", "msedge", "msedge-beta", "msedge-dev", "msedge-canary". Read more about using [Google Chrome and Microsoft Edge](./browsers.mdx#google-chrome--microsoft-edge).
  - `setChromiumSandbox` &#60;[boolean]&#62; Enable Chromium sandboxing. Defaults to `false`.
  - `setColorScheme` &#60;`enum ColorScheme { LIGHT, DARK, NO_PREFERENCE }`&#62; Emulates `'prefers-colors-scheme'` media feature, supported values are `'light'`, `'dark'`, `'no-preference'`. See [Page.emulateMedia([options])](./api/class-page.mdx#page-emulate-media) for more details. Defaults to `'light'`.
  - `setDeviceScaleFactor` &#60;[double]&#62; Specify device scale factor (can be thought of as dpr). Defaults to `1`.
  - `setDevtools` &#60;[boolean]&#62; **Chromium-only** Whether to auto-open a Developer Tools panel for each tab. If this option is `true`, the `headless` option will be set `false`.
  - `setDownloadsPath` &#60;[Path]&#62; If specified, accepted downloads are downloaded into this directory. Otherwise, temporary directory is created and is deleted when browser is closed.
  - `setEnv` &#60;[Map]<[String], [String]>&#62; Specify environment variables that will be visible to the browser. Defaults to `process.env`.
  - `setExecutablePath` &#60;[Path]&#62; Path to a browser executable to run instead of the bundled one. If `executablePath` is a relative path, then it is resolved relative to the current working directory. Note that Playwright only works with the bundled Chromium, Firefox or WebKit, use at your own risk.
  - `setExtraHTTPHeaders` &#60;[Map]<[String], [String]>&#62; An object containing additional HTTP headers to be sent with every request. All header values must be strings.
  - `setGeolocation` &#60;Geolocation&#62;
    - `setLatitude` &#60;[double]&#62; Latitude between -90 and 90.
    - `setLongitude` &#60;[double]&#62; Longitude between -180 and 180.
    - `setAccuracy` &#60;[double]&#62; Non-negative accuracy value. Defaults to `0`.
  - `setHandleSIGHUP` &#60;[boolean]&#62; Close the browser process on SIGHUP. Defaults to `true`.
  - `setHandleSIGINT` &#60;[boolean]&#62; Close the browser process on Ctrl-C. Defaults to `true`.
  - `setHandleSIGTERM` &#60;[boolean]&#62; Close the browser process on SIGTERM. Defaults to `true`.
  - `setHasTouch` &#60;[boolean]&#62; Specifies if viewport supports touch events. Defaults to false.
  - `setHeadless` &#60;[boolean]&#62; Whether to run browser in headless mode. More details for [Chromium](https://developers.google.com/web/updates/2017/04/headless-chrome) and [Firefox](https://developer.mozilla.org/en-US/docs/Mozilla/Firefox/Headless_mode). Defaults to `true` unless the `devtools` option is `true`.
  - `setHttpCredentials` &#60;HttpCredentials&#62; Credentials for [HTTP authentication](https://developer.mozilla.org/en-US/docs/Web/HTTP/Authentication).
    - `setUsername` &#60;[String]&#62;
    - `setPassword` &#60;[String]&#62;
  - `setIgnoreAllDefaultArgs` &#60;[boolean]&#62; If `true`, Playwright does not pass its own configurations args and only uses the ones from `args`. Dangerous option; use with care. Defaults to `false`.
  - `setIgnoreDefaultArgs` &#60;[List]<[String]>&#62; If `true`, Playwright does not pass its own configurations args and only uses the ones from `args`. Dangerous option; use with care.
  - `setIgnoreHTTPSErrors` &#60;[boolean]&#62; Whether to ignore HTTPS errors during navigation. Defaults to `false`.
  - `setIsMobile` &#60;[boolean]&#62; Whether the `meta viewport` tag is taken into account and touch events are enabled. Defaults to `false`. Not supported in Firefox.
  - `setJavaScriptEnabled` &#60;[boolean]&#62; Whether or not to enable JavaScript in the context. Defaults to `true`.
  - `setLocale` &#60;[String]&#62; Specify user locale, for example `en-GB`, `de-DE`, etc. Locale will affect `navigator.language` value, `Accept-Language` request header value as well as number and date formatting rules.
  - `setOffline` &#60;[boolean]&#62; Whether to emulate network being offline. Defaults to `false`.
  - `setPermissions` &#60;[List]<[String]>&#62; A list of permissions to grant to all pages in this context. See [BrowserContext.grantPermissions(permissions[, options])](./api/class-browsercontext.mdx#browser-context-grant-permissions) for more details.
  - `setProxy` &#60;Proxy&#62; Network proxy settings.
    - `setServer` &#60;[String]&#62; Proxy to be used for all requests. HTTP and SOCKS proxies are supported, for example `http://myproxy.com:3128` or `socks5://myproxy.com:3128`. Short form `myproxy.com:3128` is considered an HTTP proxy.
    - `setBypass` &#60;[String]&#62; Optional coma-separated domains to bypass proxy, for example `".com, chromium.org, .domain.com"`.
    - `setUsername` &#60;[String]&#62; Optional username to use if HTTP proxy requires authentication.
    - `setPassword` &#60;[String]&#62; Optional password to use if HTTP proxy requires authentication.
  - `setRecordHarOmitContent` &#60;[boolean]&#62; Optional setting to control whether to omit request content from the HAR. Defaults to `false`.
  - `setRecordHarPath` &#60;[Path]&#62; Enables [HAR](http://www.softwareishard.com/blog/har-12-spec) recording for all pages into the specified HAR file on the filesystem. If not specified, the HAR is not recorded. Make sure to call [BrowserContext.close()](./api/class-browsercontext.mdx#browser-context-close) for the HAR to be saved.
  - `setRecordVideoDir` &#60;[Path]&#62; Enables video recording for all pages into the specified directory. If not specified videos are not recorded. Make sure to call [BrowserContext.close()](./api/class-browsercontext.mdx#browser-context-close) for videos to be saved.
  - `setRecordVideoSize` &#60;RecordVideoSize&#62; Dimensions of the recorded videos. If not specified the size will be equal to `viewport` scaled down to fit into 800x800. If `viewport` is not configured explicitly the video size defaults to 800x450. Actual picture of each page will be scaled down if necessary to fit the specified size.
    - `setWidth` &#60;[int]&#62; Video frame width.
    - `setHeight` &#60;[int]&#62; Video frame height.
  - `setReducedMotion` &#60;`enum ReducedMotion { REDUCE, NO_PREFERENCE }`&#62; Emulates `'prefers-reduced-motion'` media feature, supported values are `'reduce'`, `'no-preference'`. See [Page.emulateMedia([options])](./api/class-page.mdx#page-emulate-media) for more details. Defaults to `'no-preference'`.
  - `setScreenSize` &#60;ScreenSize&#62; Emulates consistent window screen size available inside web page via `window.screen`. Is only used when the `viewport` is set.
    - `setWidth` &#60;[int]&#62; page width in pixels.
    - `setHeight` &#60;[int]&#62; page height in pixels.
  - `setSlowMo` &#60;[double]&#62; Slows down Playwright operations by the specified amount of milliseconds. Useful so that you can see what is going on.
  - `setTimeout` &#60;[double]&#62; Maximum time in milliseconds to wait for the browser instance to start. Defaults to `30000` (30 seconds). Pass `0` to disable timeout.
  - `setTimezoneId` &#60;[String]&#62; Changes the timezone of the context. See [ICU's metaZones.txt](https://cs.chromium.org/chromium/src/third_party/icu/source/data/misc/metaZones.txt?rcl=faee8bc70570192d82d2978a71e2a615788597d1) for a list of supported timezone IDs.
  - `setTracesDir` &#60;[Path]&#62; If specified, traces are saved into this directory.
  - `setUserAgent` &#60;[String]&#62; Specific user agent to use in this context.
  - `setViewportSize` &#60;[null]|ViewportSize&#62; Emulates consistent viewport for each page. Defaults to an 1280x720 viewport. `null` disables the default viewport.
    - `setWidth` &#60;[int]&#62; page width in pixels.
    - `setHeight` &#60;[int]&#62; page height in pixels.
- returns: &#60;[BrowserContext]&#62;

Returns the persistent browser context instance.

Launches browser that uses persistent storage located at `userDataDir` and returns the only context. Closing this context will automatically close the browser.

## BrowserType.name() {#browser-type-name}
- returns: &#60;[String]&#62;

Returns browser name. For example: `'chromium'`, `'webkit'` or `'firefox'`.

[Browser]: ./api/class-browser.mdx "Browser"
[BrowserContext]: ./api/class-browsercontext.mdx "BrowserContext"
[BrowserType]: ./api/class-browsertype.mdx "BrowserType"
[ConsoleMessage]: ./api/class-consolemessage.mdx "ConsoleMessage"
[Dialog]: ./api/class-dialog.mdx "Dialog"
[Download]: ./api/class-download.mdx "Download"
[ElementHandle]: ./api/class-elementhandle.mdx "ElementHandle"
[FileChooser]: ./api/class-filechooser.mdx "FileChooser"
[Frame]: ./api/class-frame.mdx "Frame"
[JSHandle]: ./api/class-jshandle.mdx "JSHandle"
[Keyboard]: ./api/class-keyboard.mdx "Keyboard"
[Mouse]: ./api/class-mouse.mdx "Mouse"
[Page]: ./api/class-page.mdx "Page"
[Playwright]: ./api/class-playwright.mdx "Playwright"
[PlaywrightException]: ./api/class-playwrightexception.mdx "PlaywrightException"
[Request]: ./api/class-request.mdx "Request"
[Response]: ./api/class-response.mdx "Response"
[Route]: ./api/class-route.mdx "Route"
[Selectors]: ./api/class-selectors.mdx "Selectors"
[TimeoutError]: ./api/class-timeouterror.mdx "TimeoutError"
[Touchscreen]: ./api/class-touchscreen.mdx "Touchscreen"
[Tracing]: ./api/class-tracing.mdx "Tracing"
[Video]: ./api/class-video.mdx "Video"
[WebSocket]: ./api/class-websocket.mdx "WebSocket"
[WebSocketFrame]: ./api/class-websocketframe.mdx "WebSocketFrame"
[Worker]: ./api/class-worker.mdx "Worker"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[EvaluationArgument]: ./core-concepts.mdx#evaluation-argument "EvaluationArgument"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify#Description "Serializable"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"

[boolean]: https://docs.oracle.com/javase/tutorial/java/nutsandbolts/datatypes.html "boolean"
[byte&#91;&#93;]: https://docs.oracle.com/javase/tutorial/java/nutsandbolts/datatypes.html "byte[]"
[Consumer]: https://docs.oracle.com/javase/8/docs/api/java/util/function/Consumer.html "Consumer"
[double]: https://docs.oracle.com/javase/tutorial/java/nutsandbolts/datatypes.html "double"
[InputStream]: https://docs.oracle.com/javase/8/docs/api/java/io/InputStream.html "InputStream"
[int]: https://docs.oracle.com/javase/tutorial/java/nutsandbolts/datatypes.html "int"
[List]: https://docs.oracle.com/javase/8/docs/api/java/util/List.html "List"
[Map]: https://docs.oracle.com/javase/8/docs/api/java/util/Map.html "Map"
[null]: https://docs.oracle.com/javase/specs/jls/se8/html/jls-3.html#jls-3.10.7 "null"
[Object]: https://docs.oracle.com/javase/8/docs/api/java/lang/Object.html "Object"
[Path]: https://docs.oracle.com/javase/8/docs/api/java/nio/file/Path.html "Path"
[Pattern]: https://docs.oracle.com/javase/8/docs/api/java/util/regex/Pattern.html "Pattern"
[Predicate]: https://docs.oracle.com/javase/8/docs/api/java/util/function/Predicate.html "Predicate"
[void]: https://docs.oracle.com/javase/tutorial/java/javaOO/methods.html "void"
[Runnable]: https://docs.oracle.com/javase/8/docs/api/java/lang/Runnable.html "Runnable"
[RuntimeException]: https://docs.oracle.com/javase/8/docs/api/java/lang/RuntimeException.html "RuntimeException"
[String]: https://docs.oracle.com/javase/8/docs/api/java/lang/String.html "String"

[all available image tags]: https://mcr.microsoft.com/v2/playwright/java/tags/list "all available image tags"
[Docker Hub]: https://hub.docker.com/_/microsoft-playwright-java "Docker Hub"
[Dockerfile.focal]: https://github.com/microsoft/playwright-java/blob/master/Dockerfile.focal "Dockerfile.focal"